<resources>
    <string name="app_name">Moderno</string>
    <string name="loading">Loading &#8230;</string>
    <string name="exit_message">Would you like to logout</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Location permissions are needed for providing Location completions."</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login_text">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="register_btn_txt">Register</string>
    <string name="email_hint">Email Id</string>
    <string name="name_hint">Full Name</string>
    <string name="signing_message">Signing in &#8230;</string>
    <string name="registering_message">Registering &#8230;</string>
    <string name="reset_message">Reset password link generating &#8230;</string>
    <string name="splash_other">splash_other</string>
    <string name="transition_login_register">login_register</string>
    <string name="email_login_register">email_login_register</string>
    <string name="emailtext_login_register">emailtext_login_register</string>
    <string name="password_login_register">password_login_register</string>
    <string name="passwordtext_login_register">passwordtext_login_register</string>
    <string name="register_login_register">register_login_register</string>
    <string name="transition_adminhome_sites">adminhome_sites</string>
    <string name="txt_adminhome_sites">txt_adminhome_sites</string>
    <string name="transition_adminhome_sitesreprt">adminhome_sitesreport</string>
    <string name="txt_adminhome_sitesreport">txt_adminhome_sitesreport</string>
    <string name="transition_adminhome_wrkreport">adminhome_wrkreport</string>
    <string name="txt_adminhome_wrkreport">txt_adminhome_wrkreport</string>
    <string name="transition_adminhome_notification">adminhome_notification</string>
    <string name="txt_adminhome_notification">txt_adminhome_notification</string>
    <string name="transition_adminhome_salary">adminhome_salary</string>
    <string name="txt_adminhome_salary">txt_adminhome_salary</string>
    <string name="transition_adminhome_adjust_time">txt_adminhome_adjust_time</string>
    <string name="txt_adminhome_adjust_time">txt_adminhome_adjust_time</string>
    <string name="transition_adminhome_device">txt_adminhome_device</string>
    <string name="txt_adminhome_device">txt_adminhome_device</string>
    <string name="transition_adminhome_device_change_request">txt_adminhome_device_change_request</string>
    <string name="txt_adminhome_device_change_request">txt_adminhome_device_change_request</string>
    <string name="transition_adminhome_userlist">txt_adminhome_userlist</string>
    <string name="txt_adminhome_userlist">txt_adminhome_userlist</string>
    <string name="transition_adminhome_pay">txt_adminhome_pay</string>
    <string name="txt_adminhome_pay">txt_adminhome_pay</string>
    <string name="transition_adminhome_paylist">txt_adminhome_paylist</string>
    <string name="txt_adminhome_paylist">txt_adminhome_paylist</string>
    <string name="transition_adminhome_complete_user_report">txt_adminhome_complete_user_report</string>
    <string name="txt_adminhome_complete_user_report">txt_adminhome_complete_user_report</string>
    <string name="transition_adminhome_add_income">txt_adminhome_add_income</string>
    <string name="txt_adminhome_add_income">txt_adminhome_add_income</string>
    <string name="transition_adminhome_add_expense">txt_adminhome_add_expense</string>
    <string name="txt_adminhome_add_expense">txt_adminhome_add_expense</string>
    <string name="transition_adminhome_income_manager">txt_adminhome_income_manager</string>
    <string name="txt_adminhome_income_manager">txt_adminhome_income_manager</string>
    <string name="transition_adminhome_add_income_category">txt_adminhome_add_income_category</string>
    <string name="txt_adminhome_add_income_category">txt_adminhome_add_income_category</string>
    <string name="transition_adminhome_add_expense_category">txt_adminhome_add_expense_category</string>
    <string name="txt_adminhome_add_expense_category">txt_adminhome_add_expense_category</string>
    <string name="transition_adminhome_income_expense">txt_adminhome_income_expense</string>
    <string name="txt_adminhome_income_expense">txt_adminhome_income_expense</string>
    <string name="transition_usershome_notification">usershome_notification</string>
    <string name="txt_usershome_notification">txt_usershome_notification</string>
    <string name="transition_usershome_history">usershome_history</string>
    <string name="txt_usershome_history">txt_usershome_history</string>
    <string name="transition_usershome_wrkreport">usershome_wrkreport</string>
    <string name="txt_usershome_wrkreport">txt_usershome_wrkreport</string>
    <string name="transition_usershome_device_change">usershome_device_change</string>
    <string name="txt_usershome_device_change">txt_usershome_device_change</string>
    <string name="sites">sites</string>
    <string name="work_reports">work reports</string>
    <string name="site_reports">site reports</string>
    <string name="select_site_txt">select site</string>
    <string name="transition_login_main">login_main</string>
    <string name="users_report">report</string>
    <string name="users_notification">notifications</string>
    <string name="users_history">history</string>
    <string name="create_site">create site</string>
    <string name="name_of_site">name of site</string>
    <string name="site_type">site type</string>
    <string name="date_of_start">date of start</string>
    <string name="project_cost">project cost</string>
    <string name="contact_number">contact number</string>
    <string name="contact_person">contact person</string>
    <string name="update_location">update location</string>
    <string name="name_missing">Name is missing</string>
    <string name="email_missing">Email Id is missing</string>
    <string name="password_missing">Password is missing</string>
    <string name="password_length_missing">Password should be at least 6 Digits</string>
    <string name="site_name_missing">Site name is missing</string>
    <string name="site_date_missing">Date is missing</string>
    <string name="site_cost_missing">Cost is missing</string>
    <string name="site_contact_number_missing">Contact person number is missing</string>
    <string name="site_contact_person_missing">Contact person name is missing</string>
    <string name="all">all</string>
    <string name="undergoing">undergoing</string>
    <string name="completed">completed</string>
    <string name="site_status">status</string>
    <string name="days_as_of">days as of now</string>
    <string name="edit_site">edit site</string>
    <string name="loginin_message">Loging In</string>
    <string name="getting_completed_site">Getting Completed Site List</string>
    <string name="getting_undergoing_site">Getting Undergoing Site List</string>
    <string name="getting_site">Getting Site List</string>
    <string name="reporting">reporting</string>
    <string name="date">date</string>
    <string name="at">at</string>
    <string name="check_out">check out</string>
    <string name="check_in">check in</string>
    <string name="get_checkin_info">Getting checkin Info</string>
    <string name="checking_in_user">Checking in User..</string>
    <string name="syn">Sync Information..</string>
    <string name="checking_out_user">Checking Out User..</string>
    <string name="payment">Payment</string>
    <string name="notification">Notification</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_to">Notification To</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="sending_notification">Sending notification..</string>
    <string name="user_missing">User Missing</string>
    <string name="message_missing">Message Missing</string>
    <string name="title_missing">Title Missing</string>
    <string name="daily">daily</string>
    <string name="monthly">monthly</string>
    <string name="select_date">select date</string>
    <string name="started_on">started on</string>
    <string name="two_dot">:</string>
    <string name="completed_on">completed on</string>
    <string name="total_hours">total hours</string>
    <string name="payment_recieved">payment received</string>
    <string name="select_month">select month</string>
    <string name="work_site">work site</string>
    <string name="hours">hours</string>
    <string name="fetching_data">Fetching data..</string>
    <string name="year">Year</string>
    <string name="month">month</string>
    <string name="rupees">%1$d  ₹.</string>
    <string name="no_pending_rupees">More %1$d  ₹ paid.</string>
    <string name="hours_symbl">%1$d Hours.</string>
    <string name="hrs_symbl">%1$d Hrs.</string>
    <plurals name="days_symbl">
        <item quantity="one">%1$d Day</item>
        <item quantity="other">%1$d Days</item>
    </plurals>
    <string name="minutes_symbl">%1$d Minutes.</string>
    <string name="at_time">AT\n%1$s</string>
    <string name="select_users">select user</string>
    <string name="not_checked_in_any_where">Not checked in any where</string>
    <string name="not_checked_out">-</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="users_chat">Chat</string>
    <string name="chat">chat</string>
    <string name="adjust_time">Check In user</string>
    <string name="device_reset">device reset</string>
    <string name="set_salary">set salary</string>
    <string name="imei">imei</string>
    <string name="reset">reset</string>
    <string name="salary">salary per hour</string>
    <string name="salary_set_done">Salary Updated</string>
    <string name="device_reset_done">Device Reset Done</string>
    <string name="payment_info">R : %1$d ₹\nE : %2$d ₹\nP : %3$d ₹</string>
    <string name="users_change_device">Device Change Request</string>
    <string name="admin_change_device">Device Change Requests</string>
    <string name="reason">reason</string>
    <string name="request">request</string>
    <string name="request_sent">Request Sent</string>
    <string name="current_new_imei">Change IMEI From : %1$s\nTO : %2$s </string>
    <string name="changerequest_reason">Reason : %1$s</string>
    <string name="submit">submit</string>
    <string name="add_income">Add Income</string>
    <string name="expense_category">expense category</string>
    <string name="expense_title">expense title</string>
    <string name="add">add</string>
    <string name="income_expense_status">Income Expense Status</string>
    <string name="category">Category</string>
    <string name="type">type</string>
</resources>