<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:transitionName="@string/transition_adminhome_add_expense_category">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="20"
        android:background="@drawable/admin_top_bg"
        android:gravity="center">

        <include layout="@layout/top_layout" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:background="@drawable/admin_container_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/expense_category"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:transitionName="@string/txt_adminhome_add_expense_category" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/quad_margin"
                android:background="@color/admin_home_btn_strock" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/expense_title"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <EditText
                android:id="@+id/et_admin_expense_category_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/semi_margin"
                android:background="@drawable/et_bg"
                android:inputType="textCapWords"
                android:longClickable="false"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="@dimen/threefourth_padding"
                android:textColor="@color/colorPrimaryDark_admin"
                android:textSize="@dimen/text_size_medium" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@color/admin_home_btn_strock" />

            <TextView
                android:id="@+id/tv_admin_expense_category_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/admin_home_btn_strock" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
